add generic buffer with args fuzzer

--- a/fuzz/meson.build
+++ b/fuzz/meson.build
@@ -97,6 +97,13 @@ foreach fuzz_basename, fuzz_save_suffix : fuzz_save_buffer_progs
     )
 endforeach
 
+
+fuzz_execs += executable('generic_buffer_with_args_fuzzer',
+    'generic_buffer_with_args_fuzzer.cc',
+    dependencies: [libvips_dep, fuzz_deps],
+    link_args: fuzz_ldflags,
+)
+
 # If the fuzzing engine is not OSS-Fuzz, build the unit tests to be run on CI
 if fuzzing_engine != 'oss-fuzz'
     test_fuzz = configure_file(
